apps/redis-insight/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: redis-insight
  labels:
    app: redisinsight
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      volumes:
        - name: redisinsight
          persistentVolumeClaim:
            claimName: redisinsight-pv-claim
      containers:
        - name:  redisinsight
          image: redis/redisinsight:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: redisinsight
            mountPath: /data
          ports:
          - containerPort: 5540
            protocol: TCP
